Website/app-deploy.yaml
# ---------------- Server Deployment + Service ----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: gemava/server:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30500   # access backend at <node-ip>:30500
---
# ---------------- Client Deployment + Service ----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: gemava/client:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
